@@ -1,3 +1,10 @@
+2005-04-29  Paolo Carlini  <pcarlini@suse.de>
+
+	* include/tr1/type_traits (is_convertible): Adjust according
+	to the resolution of TR1 issue 3.20.
+	* testsuite/tr1/4_metaprogramming/relationships_between_types/
+	is_convertible/is_convertible.cc: Add tests.
+
 2005-04-28  Paolo Carlini  <pcarlini@suse.de>
 	    Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
